//创建订单接口
//查询订单接口
//修改订单接口
syntax = "proto3";
// user 包
package user;
// 指定 go 的包路径及包名
option go_package="drink/user";
// option php_namespace="App\\Services";
// 菜单 服务及服务接口的定义
service order {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {} //创建订单
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {} //修改订单
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {} //按条件查询订单
}

message HavingData{
  int32 having_id = 1;
  float having_price = 2;
}
message CreateOrderRequest {
  repeated HavingData havings = 1;
  int32 user_id = 2;
  string order_remark = 3;
  string order_tag = 4;
}
message CreateOrderResponse {
  int32 err = 1;
  string msg = 2;
}
message UpdateOrderRequest {
  repeated int32 having = 1;
  int32 order_id = 2;
  string order_status = 3;//确认是新增还是删除
}
message UpdateOrderResponse {
  int32 err = 1;
  string msg = 2;
}
message GetOrderRequest {
  int32 user_id = 1;
  string create_time = 2;
  string order_status = 3;
  int32 order_id = 4;
  int32 limit = 5; //每页多少
  int32 page = 6; //页数
}
message Order {
  int32 order_id = 1;
  int32 user_id = 2;
  string order_tag = 3;
  float order_price = 4;
  string order_create_time = 5;
  string order_update_time = 6;
  string order_status = 7;
  string order_remark = 8;
}

message GetOrderResponse{
  int32 err = 1;
  string msg = 2;
  repeated Order data = 3;
}